src/Components/LoadingWrapper/LoadingWrapper.module.scss
.loadingContainer, .contentContainer {
  opacity: 0;
  transition: opacity .4s ease;
}

.loadingContainer {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  height: calc(100vh);
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.fadeEnterActive {
  opacity: 1;
}

.fadeExitActive {
  opacity: 0;
}

